# ocr

./: .gitignore  Dockerfile  analyzer.py  config.py  controller.py  converter.py  docker-compose.yml  image_reader.py  main.py  pyproject.toml  testfile.py
validators/: credit_card_validator.py  id_validator.py  number_validator.py  plate_validator.py
