[tool.poetry]
name = "ocr-pj"
version = "0.1.0"
description = ""
authors = ["smhzsy <ozsoysemih029@gmail.com>"]
readme = "README.md"
packages = [{include = "ocr_pj"}]

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
redis = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
